--- a/.github/workflows/build-for-beta.yml
+++ b/.github/workflows/build-for-beta.yml
@@ -1,4 +1,4 @@
-name: NSIS
+name: Beta version builds
 
 on:
   push:
@@ -10,12 +10,14 @@ jobs:
     runs-on: ubuntu-latest
     container: debian:sid
     steps:
+    - name: Checkout
+      uses: actions/checkout@v4
     - name: Install NSIS
       run: |
         bash -c 'echo "deb http://ftp.debian.org/debian unstable main contrib non-free" >> /etc/apt/sources.list.d/unstable.list'
         apt-get -y update
         apt-get -y install -t unstable nsis
-    - name: Print NSIS version
-      run: makensis -VERSION
-    - name: Print NSIS compile flags
-      run: makensis -HDRINFO
+    - name: Make NSIS installer
+      run: makensis installer.nsi
+    - name: Check builds
+      run: ls
