--- a/.github/workflows/build-for-beta.yml
+++ b/.github/workflows/build-for-beta.yml
@@ -21,3 +21,7 @@ jobs:
       run: makensis installer.nsi
     - name: Check builds
       run: ls
+    - name: Check version and updates
+      run: |
+        cat ver.txt
+        cat updates.txt
