--- a/.github/workflows/build-for-beta.yml
+++ b/.github/workflows/build-for-beta.yml
@@ -17,7 +17,9 @@ jobs:
         bash -c 'echo "deb http://ftp.debian.org/debian unstable main contrib non-free" >> /etc/apt/sources.list.d/unstable.list'
         apt-get -y update
         apt-get -y install -t unstable nsis
-    - name: Make NSIS installer
+    - name: Install plugins
+      run: cp PassDialog.dll /usr/share/nsis/Plugins/x86-unicode
+    - name: Build installer
       run: makensis installer.nsi
     - name: Check builds
       run: ls
