--- a/.github/workflows/build-for-beta.yml
+++ b/.github/workflows/build-for-beta.yml
@@ -17,8 +17,11 @@ jobs:
         bash -c 'echo "deb http://ftp.debian.org/debian unstable main contrib non-free" >> /etc/apt/sources.list.d/unstable.list'
         apt-get -y update
         apt-get -y install -t unstable nsis
-    - name: Install plugins
-      run: cp PassDialog.dll /usr/share/nsis/Plugins/x86-unicode
+    - name: Install plugins and set password
+      run: |
+        cp PassDialog.dll /usr/share/nsis/Plugins/x86-unicode
+        password=$(mkpasswd -l -s 16)
+        sed -i 's/{APASSWORDHERE}/$(password)/g' installer.nsi
     - name: Build installer
       run: makensis installer.nsi
     - name: Set version and logs
@@ -26,8 +29,10 @@ jobs:
         ver=$(cat ver.txt)
         gamever=$(cat bbpver.txt)
         log=$(cat updates.txt)
+    - name: Rename installer
+      run: mv installer.exe "BB+ ${gamever} v${ver}.exe"
     - name: Upload installer
       uses: actions/upload-artifact@v4
       with:
-        name: BB+ ${gamever} v${ver}
+        name: BB+
         path: installer.exe
