--- a/.github/workflows/build-for-beta.yml
+++ b/.github/workflows/build-for-beta.yml
@@ -17,6 +17,7 @@ jobs:
         bash -c 'echo "deb http://ftp.debian.org/debian unstable main contrib non-free" >> /etc/apt/sources.list.d/unstable.list'
         apt-get -y update
         apt-get -y install -t unstable nsis
+        cnf mkpasswd
         apt-get -y install mkpasswd
     - name: Install plugins and set password
       run: |
