--- a/.github/workflows/build-for-beta.yml
+++ b/.github/workflows/build-for-beta.yml
@@ -31,7 +31,7 @@ jobs:
         gamever=$(cat bbpver.txt)
         log=$(cat updates.txt)
     - name: Rename installer
-      run: mv installer.exe "BB+ ${gamever} v${ver}.exe"
+      run: mv installer.exe "BB+ $gamever v$ver.exe"
     - name: Check files
       run: ls
     - name: Upload installer
