--- a/.github/workflows/build-for-beta.yml
+++ b/.github/workflows/build-for-beta.yml
@@ -5,12 +5,6 @@ on:
     branches:
       - beta
 
-env:
-  ver: beta
-  gamever: beta
-  log: beta
-  password: beta
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -27,8 +21,7 @@ jobs:
     - name: Install plugins and set password
       run: |
         cp PassDialog.dll /usr/share/nsis/Plugins/x86-unicode
-        password=$(makepasswd --chars=16)
-        echo $password
+        export password=$(makepasswd --chars=16)
         sed -i 's/{APASSWORDHERE}/'"$password"'/g' installer.nsi
         sed -i 's/{PASSWORD}/'"$password"'/g' updates.txt
     - name: Build installer
@@ -36,9 +29,9 @@ jobs:
     - name: Set version and logs and rename the installer
       run: |
         echo $password
-        ver=$(cat ver.txt)
-        gamever=$(cat bbpver.txt)
-        log=$(cat updates.txt)
+        export ver=$(cat ver.txt)
+        export gamever=$(cat bbpver.txt)
+        export log=$(cat updates.txt)
         echo $ver
         echo $gamever
         echo $log
