--- a/.github/workflows/build-for-beta.yml
+++ b/.github/workflows/build-for-beta.yml
@@ -37,5 +37,5 @@ jobs:
     - name: Upload installer
       uses: actions/upload-artifact@v4
       with:
-        name: BB+ ${GITHUB_REF#refs/heads/}
+        name: BB+ ${GITHUB_REF#refs//heads//}
         path: BB+*.exe
