--- a/.github/workflows/build-for-beta.yml
+++ b/.github/workflows/build-for-beta.yml
@@ -33,7 +33,7 @@ jobs:
       run: |
         ver=$(cat ver.txt)
         gamever=$(cat bbpver.txt)
-        log=$(cat updates.txt | while read rows do echo $rows+"\n" done)
+        log=$(cat updates.txt)
         echo "ver=$ver" >> "$GITHUB_OUTPUT"
         echo "gamever=$gamever" >> "$GITHUB_OUTPUT"
         echo "log=$log" >> "$GITHUB_OUTPUT"
