--- a/.github/workflows/build-for-beta.yml
+++ b/.github/workflows/build-for-beta.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v4
     - name: Check if skip build
       run: |
-        if [ ! -d "/skip" ]; then
+        if [ -f "/skip" ]; then
           exit 1
         fi
     - name: Install NSIS and makepasswd
