--- a/.github/workflows/build-for-beta.yml
+++ b/.github/workflows/build-for-beta.yml
@@ -12,11 +12,8 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v4
-    - name: Check if skip build
-      run: |
-        if [ -f "/skip" ]; then
-          exit 1
-        fi
+    - name: Skip build (disable when needs to build)
+      run: exit 1
     - name: Install NSIS and makepasswd
       run: |
         bash -c 'echo "deb http://ftp.debian.org/debian unstable main contrib non-free" >> /etc/apt/sources.list.d/unstable.list'
