--- a/.github/workflows/build-for-release.yml
+++ b/.github/workflows/build-for-release.yml
@@ -32,7 +32,7 @@ jobs:
         echo "gamever=$gamever" >> "$GITHUB_OUTPUT"
         echo "log=$log" >> "$GITHUB_OUTPUT"
         echo "tag=$tag" >> "$GITHUB_OUTPUT"
-        mv installer_release.exe "BB+ $gamever v$ver.exe"
+        mv installer.exe "BB+ $gamever v$ver.exe"
         echo "file_name=BB+ $gamever v$ver.exe" >> "$GITHUB_OUTPUT"
     - name: Create Release
       id: create_release
