--- a/.github/workflows/build-for-release.yml
+++ b/.github/workflows/build-for-release.yml
@@ -7,24 +7,25 @@ on:
 
 jobs:
   build:
+    name: 构建
     runs-on: ubuntu-latest
     container: debian:sid
     steps:
-    - name: Checkout
+    - name: 获取最新版
       uses: actions/checkout@v4
-    - name: Install NSIS
+    - name: 安装 NSIS
       run: |
         bash -c 'echo "deb http://ftp.debian.org/debian unstable main contrib non-free" >> /etc/apt/sources.list.d/unstable.list'
         apt-get -y update
         apt-get -y install -t unstable nsis
-    - name: Build installer
+    - name: 构建安装程序
       run: makensis installer_release.nsi
-    - name: Set version and logs and rename the installer
+    - name: 设置版本、日志并重命名安装程序
       id: sets
       run: |
         ver=$(cat ver.txt)
         gamever=$(cat bbpver.txt)
-        sed -i 's/{PASSWORD}/None/g' updates.txt
+        sed -i 's/{PASSWORD}/无/g' updates.txt
         log=$(cat updates.txt)
         tag=$(cat ver.txt | tr [:upper:] [:lower:] | tr ' ' '_')
         echo "ver=$ver" >> "$GITHUB_OUTPUT"
@@ -33,7 +34,7 @@ jobs:
         echo "tag=$tag" >> "$GITHUB_OUTPUT"
         mv installer.exe "BB+ $gamever v$ver.exe"
         echo "file_name=BB+ $gamever v$ver.exe" >> "$GITHUB_OUTPUT"
-    - name: Create Release
+    - name: 创建发行版
       id: create_release
       uses: actions/create-release@v1.1.4
       env:
@@ -44,7 +45,7 @@ jobs:
         body: ${{ steps.sets.outputs.log }}
         draft: false
         prerelease: false
-    - name: Upload Release Asset
+    - name: 上传文件
       id: upload-release-asset 
       uses: actions/upload-release-asset@v1
       env:
