--- a/.github/workflows/build-for-release.yml
+++ b/.github/workflows/build-for-release.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     container: debian:sid
     steps:
+    - name: 跳过构建
+      run: exit 1
     - name: 获取最新版
       uses: actions/checkout@v4
     - name: 安装 NSIS
