--- a/.github/workflows/build-for-release.yml
+++ b/.github/workflows/build-for-release.yml
@@ -24,7 +24,7 @@ jobs:
     - name: 获取汉化文件
       run: |
         git clone https://github.com/Aruvelut-123/BB-ChineseFile
-        mv BB-ChineseFile\* .\
+        cp -f -R -v BB-ChineseFile/* ./
     - name: 打包汉化文件
       run: |
         7z a BBP.7z BBP\.
@@ -36,6 +36,7 @@ jobs:
         bash -c 'echo "deb http://ftp.debian.org/debian unstable main contrib non-free" >> /etc/apt/sources.list.d/unstable.list'
         apt-get -y update
         apt-get -y install -t unstable nsis
+        ver=$(cat ver.txt)
         sed -i 's/ver_replace_001/'"$ver"'/g' installer_release${{matrix.arch}}.nsi
     - name: 构建安装程序
       run: makensis installer_release${{matrix.arch}}.nsi
