--- a/.github/workflows/build-for-beta.yml
+++ b/.github/workflows/build-for-beta.yml
@@ -8,6 +8,9 @@ on:
         required: true
         default: false
         type: boolean
+  push:
+    branches:
+      - beta
     
 jobs:
   create:
