--- a/.github/workflows/build-for-release.yml
+++ b/.github/workflows/build-for-release.yml
@@ -57,10 +57,10 @@ jobs:
         cp -f -R -v BB-ChineseFile/* ./
     - name: 打包汉化文件
       run: |
-        7z a BBP.7z BBP\.
-        7z a AutoTranslator.7z AutoTranslator\.
-        7z a BepInEx.7z BepInEx${{matrix.arch}}\.
-        7z a BBDevAPI.7z BBDevAPI\.
+        7z a BBP.7z BBP/.
+        7z a AutoTranslator.7z AutoTranslator/.
+        7z a BepInEx.7z BepInEx${{matrix.arch}}/.
+        7z a BBDevAPI.7z BBDevAPI/.
     - name: 安装 NSIS
       run: |
         bash -c 'echo "deb http://ftp.debian.org/debian unstable main contrib non-free" >> /etc/apt/sources.list.d/unstable.list'
