--- a/.github/workflows/build-for-beta.yml
+++ b/.github/workflows/build-for-beta.yml
@@ -18,10 +18,14 @@ jobs:
     runs-on: ubuntu-latest
     container: debian:sid
     steps:
-    - name: 安装makepasswd
+    - name: 安装 makepasswd 和 git
       run: |
         apt-get -y update
-        apt-get -y install makepasswd
+        apt-get -y install makepasswd git
+    - name: 获取汉化文件
+      run: |
+        git clone https://github.com/Aruvelut-123/BB-ChineseFile
+        cp -f -R -v BB-ChineseFile/* ./
     - name: 设置版本、日志
       id: sets
       run: |
@@ -63,14 +67,10 @@ jobs:
     steps:
     - name: 获取最新版
       uses: actions/checkout@v4
-    - name: 安装7-zip和git
+    - name: 安装 7-zip
       run: |
         apt-get -y update
-        apt-get -y install p7zip-full git
-    - name: 获取汉化文件
-      run: |
-        git clone https://github.com/Aruvelut-123/BB-ChineseFile
-        cp -f -R -v BB-ChineseFile/* ./
+        apt-get -y install p7zip-full
     - name: 检查文件目录
       run: ls
     - name: 打包汉化文件
