--- a/.github/workflows/build-for-beta.yml
+++ b/.github/workflows/build-for-beta.yml
@@ -18,6 +18,8 @@ jobs:
     runs-on: ubuntu-latest
     container: debian:sid
     steps:
+    - name: 获取最新版
+      uses: actions/checkout@v4
     - name: 安装 makepasswd 和 git
       run: |
         apt-get -y update
@@ -67,12 +69,14 @@ jobs:
     steps:
     - name: 获取最新版
       uses: actions/checkout@v4
-    - name: 安装 7-zip
+    - name: 安装 7-zip 和 git
       run: |
         apt-get -y update
-        apt-get -y install p7zip-full
-    - name: 检查文件目录
-      run: ls
+        apt-get -y install p7zip-full git
+    - name: 获取汉化文件
+      run: |
+        git clone https://github.com/Aruvelut-123/BB-ChineseFile
+        cp -f -R -v BB-ChineseFile/* ./
     - name: 打包汉化文件
       run: |
         7z a BBP.7z BBP/.
