--- a/.github/workflows/build-for-beta.yml
+++ b/.github/workflows/build-for-beta.yml
@@ -108,7 +108,7 @@ jobs:
         echo "file_name=BB+_$gamever_v$ver_x${{matrix.arch}}.exe" >> "$GITHUB_OUTPUT"
     - name: 上传文件
       if: ${{inputs.create_pre_release == 'true'}}
-      id: upload-release-asset 
+      id: upload_asset
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -118,7 +118,7 @@ jobs:
         asset_name: ${{ steps.sets.outputs.file_name }}
         asset_content_type: application/zip
     - name: 上传构建
-      if: ${{inputs.create_pre_release == 'false'}}
+      if: ${{inputs.create_pre_release == 'false'}} || steps.upload_asset.conclusion == 'skipped'
       uses: actions/upload-artifact@v4
       with:
         name: ${{ steps.sets.outputs.file_name }}
