--- a/.github/workflows/build-for-beta.yml
+++ b/.github/workflows/build-for-beta.yml
@@ -104,8 +104,8 @@ jobs:
         gamever=$(cat bbpver.txt)
         echo "ver=$ver" >> "$GITHUB_OUTPUT"
         echo "gamever=$gamever" >> "$GITHUB_OUTPUT"
-        mv installer.exe "BB+_$gamever_v$ver_x${{matrix.arch}}.exe"
-        echo "file_name=BB+_$gamever_v$ver_x${{matrix.arch}}.exe" >> "$GITHUB_OUTPUT"
+        mv installer.exe "BB+ $gamever v$ver x${{matrix.arch}}.exe"
+        echo "file_name=BB+ $gamever v$ver x${{matrix.arch}}.exe" >> "$GITHUB_OUTPUT"
     - name: 上传文件
       if: ${{inputs.create_pre_release == 'true'}}
       id: upload_asset
